[package]
name = "css-parser"
version = "0.1.0"
edition = "2018"

[dependencies]
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.6"
cssparser = { version = "0.29.0", features = ["serde"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = "s"

[features]
default = ["wee_alloc"]
